# shiftledger

./: .env  .gitignore  docker-compose.yaml  pyproject.toml  pyrightconfig.json
accounting-core/: main.py  pyproject.toml  schemas.py
accounting-core/api/: deps.py
accounting-core/api/v1/: products.py
accounting-core/crud/: debts.py  products.py  reports.py
accounting-core/src/: main.py
accounting-core/src/api/v1/: categories.py  reports.py  supplies.py
accounting-core/src/crud/: __init__.py  categories.py  supplies.py
accounting-core/src/templates/: index.html  reports_new.html
accounting-core/templates/: base.html  debt.html  reports_list.html  supplies_new.html
accounting_core/: pyproject.toml
accounting_core/src/: database.py  main.py  schemas.py
accounting_core/src/api/v1/: categories.py  products.py  reports.py  supplies.py
accounting_core/src/crud/: __init__.py  categories.py  debts.py  products.py  reports.py  supplies.py
accounting_core/src/templates/: supplies_list.html
telegram-bot/: main.py  pyproject.toml
telegram-bot/src/: database.py  exc.py  messages.py  parser_message.py  request.py  utils.py
telegram-bot/src/handlers/: common.py
telegram-bot/src/ui/: keyboards.py
